# spar-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: splade.py
scripts/: generate_sparse_index.py  seed_docs_sqlite.py
src/: app.py  models.py
src/core/: config.py  database.py
src/ingestion/: __init__.py  sparse.py
src/retrieval/: __init__.py  base.py  sparse.py
src/search/: routes.py  schemas.py  services.py
